Fixed broken links on pics

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
         <div class="navbar-all">
           <a href="#" class="navbar">Blog</a>
           <a href="#" class="navbar">Archive</a>
-          <a href="#"><img id="black-logo-top" src="/1st_Sprint/02_Project_News_Site/project-news-site-master/logo/black_logo.png" alt="Bläck logo"></a>
+          <a href="#"><img id="black-logo-top" src="/logo/black_logo.png" alt="Bläck logo"></a>
           <a href="#" class="navbar">Store</a>
           <a href="#" class="navbar">About</a>
           <a href="#main-menu" class="menu-toggle">
@@ -37,7 +37,7 @@
     <section class="big-news">
       <!-- The big news content -->
       <a href="#">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site-master/pics/Articles-pics/glacier.jpeg" alt="Glacier">
+        <img src="/pics/Articles-pics/glacier.jpeg" alt="Glacier">
         <h1>Gardens of Branching Paths</h1>
       </a>
     </section>
@@ -50,11 +50,11 @@
     <section>
       <!-- The other news  -->
       <span class="portrett">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site-master/pics/portrett/neon_building.jpeg" alt="Neon building">
+        <img src="/pics/portrett/neon_building.jpeg" alt="Neon building">
       </span class="portrett">
 
       <span class="portrett">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site-master/pics/portrett/swan.jpeg" alt="Black swan">
+        <img src="/pics/portrett/swan.jpeg" alt="Black swan">
       </span>
     </section>
 
@@ -64,7 +64,7 @@
 
     <section>
       <span class="most-read">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site/code/pics/Articles-pics/greenhouse.jpeg" alt="Greenhouse with plants">
+        <img src="/pics/Articles-pics/greenhouse.jpeg" alt="Greenhouse with plants">
         <h3>Meditating Greens</h3>
         <h4>By Maurice Hall</h4>
       </span>
@@ -72,7 +72,7 @@
 
     <section>
       <span class="most-read">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site/code/pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
+        <img src="/pics/Articles-pics/killme_or_freeme.jpeg" alt="Grafiti that reads 'Kill me or free me'">
         <h3>Their Story Wrote Itself</h3>
         <h4>By Rebecca Gustavsson</h4>
       </span>
@@ -80,7 +80,7 @@
 
     <section>
       <span class="most-read">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site/code/pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
+        <img src="/pics/Articles-pics/men_pigeons.jpeg" alt="Men sitting on a bench, feeding pigeons">
         <h3>Friendship For A Lifetime</h3>
         <h4>By Eryk Stamp</h4>
       </span>
@@ -88,7 +88,7 @@
    
     <section>
       <span class="most-read">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site/code/pics/Articles-pics/mural.jpeg" alt="Colorful mural">
+        <img src="/pics/Articles-pics/mural.jpeg" alt="Colorful mural">
         <h3>Casually Misbehaving</h3>
         <h4>By Belinda Laila Beech</h4>
       </span>
@@ -98,7 +98,7 @@
     <h2>Gallery</h2>
     <section>
       <span class="gallery-span">
-        <img src="/1st_Sprint/02_Project_News_Site/project-news-site/code/pics/gallery/grandi01.jpg" alt="Colorful mural">
+        <img src="/pics/gallery/grandi01.jpg" alt="Sunset reflecting in steel doors on a hut">
        <div id="arrows">
         <i class="fas fa-arrow-left"></i>
         <i class="fas fa-arrow-right"></i>
