--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,100 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="favicon.ico">
+  <title>The meditator</title>
+  <link href="https://fonts.googleapis.com/css?family=Baskervville|Enriqueta|Merriweather|Nunito|Raleway&display=swap"
+    rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css" />
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+  <header>
+
+    <h1>the meditator</h1>
+    <h3>The number one spot for your inner life</h3>
+    <nav>
+      <a href="https://www.yogajournal.com/" target="_blank">Latest</a>
+      <a href="https://www.yogajournal.com/" target="_blank">About</a>
+      <a href="https://www.yogajournal.com/" target="_blank">Subscribe</a>
+    </nav>
+
+
+
+  </header>>
+
+  <!-- The big news content -->
+
+  <section class="big-news-section">
+
+    <div class="big-news-img">
+      <img src="trump.jpg" class="trump" alt="Donald Trump from behind">
+    </div>
+    <div class="big-news-text">
+
+      <h5>Breaking</h5>
+      <br>
+      <h2>Donald Trump: "Presidency is not for me"</h2>
+      <br>
+      <p>Donald Trump found his true self in a Buddhist temple and says he's leaving politics in order to...</p>
+    </div>
+
+  </section>
+
+  <section class="other-news-section">
+    <!-- The other news  -->
+    <div class="other-news">
+      <div class="other-news-img">
+        <img src="andbreathe.jpg" alt="neon sign in grass">
+      </div>
+      <div class="other-news-text">
+        <h4>Is Corporate Mindfulness Training Just Zen Washing?</h4>
+        <p>A recent study that highlights the benefits of daily meditation practices in the workplace has people talking
+          about the commercialization of mindfulness, and whether it ...</p>
+      </div>
+
+    </div>
+    <div class="other-news">
+      <div class="other-news-img">
+        <img src="meditate.jpg" alt="a person meditating in front of lake">
+      </div>
+      <div class="other-news-text">
+        <h4> Sadhguru On Why Meditation Doesn't Work For Everyone</h4>
+        <p> The moment we utter the word “meditation,” there are all kinds of misconceptions about it. First of all, the
+          English word “meditation” doesn’t mean anything in the sense, if you close your eyes...</p>
+      </div>
+
+    </div>
+    <div class="other-news">
+      <div class="other-news-img">
+        <img src="sadperson.jpg" alt="a young man in agony">
+      </div>
+      <div class="other-news-text">
+        <h4> Meditation helped me drag myself out of self-loathing</h4>
+        <p>Chris Brock: My mind constantly raced with negative thoughts. I was filled with self-loathing. I would lie
+          awake at night cursing myself for not being as good or as clever or...</p>
+      </div>
+
+    </div>
+    <div class="other-news">
+      <div class="other-news-img">
+        <img src="darkness.jpg" alt="silhoutte  of man againt starry sky">
+      </div>
+      <div class="other-news-text">
+        <h4> UK hosts first summit on mindful politics</h4>
+        <p>Ministers to meditate with politicians from Israel, Sri Lanka and Sweden as part of event exploring benefits
+          of mindfulness. The group will meet at parliament on Tuesday to be led in...</p>
+      </div>
+  </section>
+
+  <footer>
+    <p>Made by Josephine Lam as a Technigo assignment</p>
+  </footer>
+</body>
+
 </html>
