added new font, large article ribbon on desktop

--- a/code/index.html
+++ b/code/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>The Clickbait: &#128240</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -42,11 +43,12 @@
       <!-- The big news content -->
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="large-card" target="_blank" rel="noopener noreferrer">
         <article>
+          <div class="corner-ribbon top-left exclude-mobile exclude-tablet">THIS JUST IN!</div>
           <img src="../img/DT_2020.jpg" class="exclude-mobile exclude-desktop" alt="">
             <h3 class="large-h3">Breaking News!</h3>
             <p class="large-text">Donalt Trump re-elected! <br>
-          See his opening speach right hear
-          </p>
+            See his opening speach right hear
+            </p>
         </article>
       </a>
     </section>
