added footer content

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/79829e9740.js" crossorigin="anonymous"></script>
   </head>
   <body>
     
@@ -15,31 +16,31 @@
       <ul>
 
         <li class="nav-item exclude-mobile item-1-order">
-          <a href="http://" target="_blank" rel="noopener noreferrer">Fresh</a>
+          <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">Fresh</a>
         </li>
 
         <li class="nav-item exclude-mobile item-2-order">
-          <a href="http://" target="_blank" rel="noopener noreferrer">Funny</a>
+          <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">Funny</a>
         </li>
 
         <li class="">
-          <a href="http://" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">
             <img src="../img/clickbait.jpg" alt="">
           </a>
         </li>
 
         <li class="nav-item exclude-mobile item-3-order">
-          <a href="http://" target="_blank" rel="noopener noreferrer">Awesome</a>
+          <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">Awesome</a>
         </li>
 
         <li class="nav-item exclude-mobile item-4-order">
-          <a href="http://" target="_blank" rel="noopener noreferrer">Meme</a>
+          <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank" rel="noopener noreferrer">Meme</a>
         </li>
 
       </ul>
     </header>
 
-    <section class="flex-container clearfix">
+    <section class="clearfix">
       <!-- The big news content -->
       <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="large-card" target="_blank" rel="noopener noreferrer">
         <article>
@@ -57,7 +58,7 @@
 
     <section class="flex-container-small flex-container-medium flex-container-desktop clearfix">
       <!-- The small news content  -->
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/RM.jpeg" alt="">
           <h3 class="small-h3">You vote matters!</h3>
@@ -70,7 +71,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/ernst.jpg" alt="">
           <h3 class="small-h3">Read it all!</h3>
@@ -82,7 +83,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/loket.jpg" alt="">
           <h3 class="small-h3">WHAT?!</h3>
@@ -94,7 +95,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/insult.jpg" alt="">
           <h3 class="small-h3">10 people you must insult before you die</h3>
@@ -106,7 +107,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
@@ -118,7 +119,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3 class="small-h3">
@@ -130,7 +131,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
@@ -142,7 +143,7 @@
         </article>
       </a>
 
-      <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
@@ -155,10 +156,16 @@
       </a>
     </section>
 
-    <footer class="">
+    <footer>
       <!-- Team Elephants! -->
       <!-- Github, linkedin links? -->
       <a href="#top" class="footer-link">Back to top</a>
+
+      <ul class="footer-icons">
+        <li><i class="fab fa-facebook-f"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fab fa-instagram"></i></li>
+      </ul>
       <p class="emoji">&#128024;</p>
     </footer>
 
