added media query and images

--- a/code/index.html
+++ b/code/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
@@ -27,14 +28,28 @@
 
   <section class="big-news">
     <!-- The big news content -->
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
   </section>
 
   <section class="news-container">
     <!-- The other news  -->
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+    <img
+      src="https://imgs.aftonbladet-cdn.se/v2/images/2134cdbe-93ac-46bb-8dd0-fc7e4b12c76d?fit=crop&h=732&q=50&w=1100&s=8ab85544f96eb9444a2c9a8be9d5543530ccd32f"
+      alt="Agent Cooper">
+
   </section>
-  <button>click</button>
-  <button>click here</button>
-  <p>Why does my terminal look different than Jennie's?</p>
+
 </body>
 
 </html>
