added 'small news' and flexbox to all of it. cleaned upthe code/css

--- a/code/index.html
+++ b/code/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>CACTUS NEWS</title>
+  <title>🌵 CACTUS NEWS</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
     </header>
 
-    <!-- Hero -->
+    <!-- big news -->
     <section class="big-news">
       Big news
       <div>
@@ -52,19 +52,78 @@
     <div class="flex-container wrapper">
       <section class="content">
         Content
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda. Nihil opus est
-          exemplis
-          hoc facere longius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
-          Nihil opus est exemplis
-          hoc facere longius.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
-          Nihil
-          opus est exemplis
-          hoc facere longius.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
-          Nihil
-          opus est exemplis
-          hoc facere longius.
-        </p>
+        <section class="small-news">
+          <a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a>
+          <a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a><a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a><a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a><a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a><a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a><a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a><a href="#">
+            <div class="small-news-images">
+              <img src="pictures/big-cactus.jpg" alt="big-cactus">
+            </div>
+            <div class="small-news-content">
+              <h3>Small news</h3>
+              <p>igbigugojbuv</p>
+            </div>
+          </a>
+        </section>
+
+
+
+
       </section>
 
       <!-- Sidebar -->
@@ -84,38 +143,6 @@
     </footer>
 
   </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- <header>
-    Some kind of logo and navbar
-
-    <nav>
-      <ul class="menu">
-        <li class="logo"><a href="#"><img src="logo.svg" alt="technigo-logo"></a></li>
-        <li class="logo">PLANT NEWS</li>
-        <li class="item"><a href="#">Plant of the week</a></li>
-        <li class="item"><a href="#">Succulents</a></li>
-        <li class="item"><a href="#">Philodendrons</a></li>
-        <li class="item"><a href="#">Outdoorplants</a></li>
-        <li class="item"><a href="#">Indoorplants</a></li>
-        <li class="item"><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header> -->
-
-
-
 </body>
 
 </html>
