project news site first version

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./style.css" />
+  <title>Project 2: The News Site</title>
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <div class="site-name">
+      <img class="logo" src="heartbeat.svg" alt="Logo">
+      <h1>Health Daily</h1>
+    </div>
+    <nav>
+      <a href="">Womens health</a>
+      <a href="">Mens health</a>
+      <img class="nav-logo" src="heartbeat.svg" alt="Logo">
+      <a href="">Childrens health</a>
+      <a href="">About us</a>
+    </nav>
+  </header>
+
+  <section class="big-news">
+    <img src="hans-reniers-lQGJCMY5qcM-unsplash.jpg" alt="Image of glass containers">
+    <div class="big-news-text">
+      <a href="https://www.dn.se/">
+        <h2>The biggest medical discoveries of 2019</h2>
+      </a>
+      <p>A lot happened within the medical field in 2019, we have the list with the 10 biggest medical breakthroughs.
+      </p>
+    </div>
+  </section>
+
+  <section class="news">
+    <div class="news-cards">
+      <a href="https://www.dn.se/">
+        <h3>Why your medication might not work</h3>
+      </a>
+      <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
+    </div>
+
+    <div class="news-cards">
+      <a href="#">
+        <h3>Strong social connections make you live longer</h3>
+      </a>
+      <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
+    </div>
+    <div class="news-cards">
+      <a href="#">
+        <h3>Why your medication might not work</h3>
+      </a>
+      <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
+    </div>
+
+    <div class="news-cards">
+      <a href="#">
+        <h3>Strong social connections make you live longer</h3>
+      </a>
+      <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
+    </div>
+    <div class="news-cards">
+      <a href="#">
+        <h3>Why your medication might not work</h3>
+      </a>
+      <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
+    </div>
+
+    <div class="news-cards">
+      <a href="#">
+        <h3>Strong social connections make you live longer</h3>
+      </a>
+      <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
+    </div>
+  </section>
+
+  <footer>
+    <a href="#">Contact</a>
+    <a href="#">Help</a>
+    <a href="#">Job Opportunities</a>
+  </footer>
+</body>
+
 </html>
