--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,6 @@
       <span></span>
     </label>
     <h2>Headline with logo</h2>
-    <a href="#"><button>Contact</button></a>
   </header>
 
   <figure>
@@ -32,7 +31,7 @@
       alt="">
   </figure>
 
-  <article>
+  <article class="big-news">
     <img
       src="https://images.unsplash.com/photo-1490059830487-2f86fddb2b4b?ixlib=rb-1.2.1&auto=format&fit=crop&w=2900&q=80">
   </article>
@@ -122,7 +121,14 @@
   </main>
 
   <footer>
-    <p>&copy <a href="url">Nathalie Rautell</a>, 2020</p>
+    <div class="footer">
+      <div class="subscribe">
+        <label>Send newsletters to:</label>
+        <input id="email" type="email" id="email" placeholder="Email">
+        <input id="subscribe" type="submit" value="Subscribe">
+      </div>
+      <p>&copy <a href="url">Nathalie Rautell</a>, 2020</p>
+    </div>
   </footer>
 </body>
 
