cleaned up the code some more. added 'actual' text instead of lorem ipsum

--- a/code/index.html
+++ b/code/index.html
@@ -39,11 +39,10 @@
       Big news
       <div>
         <img src="pictures/cactus-farm.jpg" alt="cactus-farm">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda. Nihil opus est
-          exemplis
-          hoc facere longius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
-          Nihil opus est exemplis
-          hoc facere longius.Lorem ipsum dolor sit amet.
+        <h2>A cactus (plural cacti, cactuses, or less commonly, cactus) is a member of the plant family Cactaceae, a
+          family comprising about 127 genera with some 1750 known species of the order Caryophyllales. The word
+          "cactus" derives, through Latin, from the Ancient Greek κάκτος, kaktos, a name originally used by Theophrastus
+          for a spiny plant whose identity is not certain.
         </h2>
       </div>
     </section>
@@ -58,8 +57,12 @@
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
           </a>
           <a href="#">
@@ -67,56 +70,90 @@
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
-          </a><a href="#">
+          </a>
+          <a href="#">
             <div class="small-news-images">
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
-          </a><a href="#">
+          </a>
+          <a href="#">
             <div class="small-news-images">
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
-          </a><a href="#">
+          </a>
+          <a href="#">
             <div class="small-news-images">
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
-          </a><a href="#">
+          </a>
+          <a href="#">
             <div class="small-news-images">
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
-          </a><a href="#">
+          </a>
+          <a href="#">
             <div class="small-news-images">
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
-          </a><a href="#">
+          </a>
+          <a href="#">
             <div class="small-news-images">
               <img src="pictures/big-cactus.jpg" alt="big-cactus">
             </div>
             <div class="small-news-content">
-              <h3>Small news</h3>
-              <p>igbigugojbuv</p>
+              <h3>
+                Small news
+              </h3>
+              <p>
+                A cactus is a member of the plant family Cactaceae.
+              </p>
             </div>
           </a>
         </section>
@@ -130,7 +167,11 @@
       <aside class="sidebar">
         Sidebar
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          A cactus (plural cacti, cactuses, or less commonly, cactus) is a member of the plant family Cactaceae, a
+          family comprising about 127 genera with some 1750 known species of the order Caryophyllales. The word "cactus"
+          derives, through Latin, from the Ancient Greek κάκτος, kaktos, a name originally used by Theophrastus for a
+          spiny plant whose identity is not certain.
+        </p>
       </aside>
     </div>
 
