added design to news cards

--- a/code/index.html
+++ b/code/index.html
@@ -75,6 +75,19 @@
       </a>
       <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
     </div>
+    <div class="news-cards">
+      <a href="#">
+        <h3>Why your medication might not work</h3>
+      </a>
+      <img src="freestocks-org-nss2eRzQwgw-unsplash.jpg" alt="Image of pills">
+    </div>
+
+    <div class="news-cards">
+      <a href="#">
+        <h3>Strong social connections make you live longer</h3>
+      </a>
+      <img src="matheus-ferrero-yfmjALh1S6s-unsplash.jpg" alt="Image of two persons holding hands">
+    </div>
   </section>
 
   <footer>
