--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Glo(bal) news</title>
+  <link rel="icon" href="logo.png">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
     <label for="nav-toggle" class="nav-toggle-label">
       <span></span>
     </label>
-    <h2>Headline with logo</h2>
+    <h2>Glo(Bal) news <img src="logo.png" alt=""></h2>
   </header>
 
   <figure>
