some styling and positioning

--- a/code/index.html
+++ b/code/index.html
@@ -10,13 +10,14 @@
   <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 </head>
 
-<body>
 
+<body>
+  <a name="top"></a>
   <header>
   <div class="sidebar">
-      <a class="active" a href="https://www.instagram.com/doggosdoingthings" target="_blank">More</a>
-      <a class="active" a href="https://www.linkedin.com/in/beatrice-lundevall-005737197" target="_blank">About</a>
-      <a class="active" a href="https://www.instagram.com/mycorgi.allan" target="_blank">Contact</a>
+      <a class="active" href="https://www.instagram.com/doggosdoingthings" target="_blank">More</a>
+      <a class="active" href="https://www.linkedin.com/in/beatrice-lundevall-005737197" target="_blank">About</a>
+      <a class="active" href="https://www.instagram.com/mycorgi.allan" target="_blank">Contact</a>
     </div>
 
     <h1>
@@ -29,28 +30,42 @@
 
   <section class="big-news">
     <img src="allan.jpg" alt="Allan" class="headline">
-    <h2>Most Popular Names of 2019</h2>
-    <!-- <button>>>></button> -->
+    <section>
+      <h2>Most Popular Names of 2019</h2>
+      <p>The shockers from last year and royal inspiration anyone? We got you! This list is filled with 
+        newcomers and old favorites. Make sure your dog is trending! <br>
+
+      </p>
+    </section>
   </section>
 
 
   <section class="flex-parent">
-    <section class="flex-child">
-    <div class="cutest"><h3>Puppies for Preseident!</h3>
-    <img src="pupper.jpg" alt="Corgi"></div>
+      <div class="cutest"><h3>Puppies for President!</h3>
+        <p>Thinking of getting your own pupperino? Here's some pointers to help you get a new best friend!</p>
+      <img src="pupper.jpg" alt="Corgi"></div>
 
-    <div class="puppies"><h3>Cutest of them All?</h3> 
-    <img src="blackdog.jpg" alt="Doggo"></div></section>
+      <div class="puppies"><h3>Cutest of them All?</h3> 
+        <p>It's not a contest but we have for sure collected some of the most fab dogs out there.</p>
+      <img src="blackdog.jpg" alt="Doggo"></div>
 
-    <section class="flex-child">
-    <div class="doing"><h3>Doggos Doing Things</h3>
-    <img src="doing.jpg" alt="Happy">
-    </div>
 
-    <div class="snow"><h3>Paws up - for snow</h3>
-    <img src="snowdoggo.jpg" alt="Snow"></div></section>
-    <!-- The other news  -->
+      <div class="doing"><h3>Doggos Doing Things</h3>
+        <p>Need a pick-me-up? Look at these dog memes and try not to LOL!</p>
+      <img src="doing.jpg" alt="Happy">
+      </div>
+
+      <div class="snow"><h3>Paws up - for snow</h3>
+        <p>Winter is coming - protect yourself and your pup from the cold with these tips!</p>
+      <img src="snowdoggo.jpg" alt="Snow"></div>
   </section>
-</body>
 
+
+<footer>
+  <p>Made for Technigo Bootcamp - week 2 project. <br>
+  By Beatrice Lundevall and beloved dog Allan.</p>
+</footer>
+
+<a href="#top" class="top">Back to top</a>
+</body>
 </html>
