--- a/code/index.html
+++ b/code/index.html
@@ -38,8 +38,9 @@
 
       <div>
         <h2>Things you no longer allowed to do! </h2>
-        <p>Nu får vi inte längre äta advokados. De är helt slut på lager, finns inte längre att få tag på dom. 
-           Kanske i fall du åker upp i rymden.</p>
+        <p>The climate change is here, and it is real. In order for us to live on our planet for a while we need to make some 
+          drastic changes. From now it is forbidden to fly. I know it sounds like a fake news, but it is´t. More and more things will be forbidden.
+          Below you can read about four new things that have been banned this week, in the whole world.</p>
 
       </div>
 
@@ -56,7 +57,7 @@
 
       <img src="https://images.unsplash.com/photo-1551698618-1dfe5d97d256?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80
       " alt="calender" class="product-img">
-      <h1>Calender</h1>
+      <h1>Skiing</h1>
 
     </div>
 
@@ -72,7 +73,7 @@
 
       <img src="https://images.unsplash.com/photo-1517446915321-65e972f1b494?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80
       " alt="beer" class="product-img">
-      <h1>Drinking beer.</h1>
+      <h1>Climb.</h1>
 
     </div>
 
