--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,103 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Elephant news media</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+
+  <header>
+
+    <hav class="navigation">
+      <img class="sidebar-logo" src="logoele3.png"></a>
+
+
+      <div class="sidebar-right">
+        <a href="#">Home</a>
+        <a href="#">News</a>
+        <a href="#">Business</a>
+        <a href="#">Sport</a>
+        <a href="#">Entertaiment<a>
+
+      </div>
+    </hav>
+
+    <div class="video-container">
+
+      <video autoplay loop muted id="video-play">
+        <source src="techgirl.mp4" type="video/mp4">
+      </video>
+    </div>
+
+  </header>
+
+  <main>
 
     <section class="big-news">
-      <!-- The big news content -->
+
+      <div class="big-news-container">
+        <div class="date">Friday jan 24, 2020</div>
+        <div class="main-titel">Today on Elephant news media</div>
+
+        <div class="story-content">
+          <div class="subject-story">Technology</div>
+          <div class="main-titel-story">The 10 Best Jobs of 2020, According to Glassdoor<br>(Surprise, Most Are In Tech)
+          </div>
+          <div class="by">By Whizy Kim, Refinery29</div>
+        </div>
+
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news">
+
+      <h1>More articles</h1>
+
+      <div class="flex-container">
+
+        <!-- Box-1 -->
+        <div>
+          <div class="art-video">
+            <video autoplay loop muted>
+              <source src="Greta-short.mp4" type="video/mp4"></video>
+          </div>
+          <div class="titel-img">Environment</div>
+          <div class="text-img">How we would protect our enviroment with 3 steps</div>
+        </div>
+
+        <!-- Box-2 -->
+        <div>
+          <div class="art-img"><img src="serena-williams.jpg" alt="serena-williams"></div>
+          <div class="titel-img">Sport</div>
+          <div class="text-img">Serena Williams Donates Prize Money From Her First Title Win In Three Years To
+            Australian Fire Relief</div>
+        </div>
+
+        <!-- Box-3 -->
+        <div>
+          <div class="art-img"><img src="view-of-mountain.jpg" alt="Mountain view"></div>
+          <div class="titel-img">Business</div>
+          <div class="text-img">Budgeting, But Make It Fun: How One Financial Expert Stays On Track</div>
+        </div>
+
+        <!-- Box-4 -->
+        <div>
+          <div class="art-img"><img src="view-of-mountain.jpg" alt="Mountain view"></div>
+          <div class="titel-img">Entertainment</div>
+          <div class="text-img">29 Actresses You’ll Need To Know In 2020</div>
+        </div>
+
+      </div>
+
     </section>
-  </body>
+
+  </main>
+
+  <footer>
+</body>
+
 </html>
